--- a/ej6.html
+++ b/ej6.html
@@ -10,12 +10,21 @@
 </head>
   <body>
     <h1>Consumiento datos de la API de openweathermap</h1>
+    <input type="text" id="ciudad" placeholder="Ciudad">
+    <button onclick="obtenerTiempo()">Obtener tiempo</button>
     <div class="container">
         <p id="objetivo"></p>
     </div>
     <script>
         /* Completar el código jQuery aquí */
-        
+        function obtenerTiempo(){
+          let url = "https://api.openweathermap.org/data/2.5/weather?q=";
+          let ciudad = $("#ciudad").val;
+          let apikey = "f92c82992792dfcbcc6f41796cc87744";
+          $.get(url+ciudad+"&appid="+apikey, function(data){
+            $("#objetivo").text("El tiempo acutal es "+ data.weather[0].main);
+          })
+        }
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
