--- a/ej7.html
+++ b/ej7.html
@@ -15,6 +15,12 @@
     </div>
     <script>
         /* Completar el código jQuery aquí */
+        $(document).ready(function () {
+          let url = 
+          $.get(url,function(respuesta){
+            $("#objetivo").html("La ip "+respuesta.ip+" se encuentra en "+respuesta.region)
+          })
+        });
     </script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
